--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ h6 {
   padding: 0 50px;
 }
 
+
 .home-container {
   display: none;
 }
@@ -306,6 +307,7 @@ h6 {
     width: 100%;
     padding: 0px 20px;
     justify-content: center;
+    background-color: var(--section-color);
   }
 
   .home-container h1,
@@ -364,7 +366,7 @@ h6 {
     right: 0;
     width: 100%;
     height: 100%;
-    border: 1px solid var(--text-color);
+    /* border: 1px solid var(--text-color); */
     padding: 10px 20px;
     background-color: var(--background);
   }
@@ -821,7 +823,7 @@ justify-content: center;
 /* media-query */
 @media (max-width: 1000px) {
   .about {
-    padding: 60px 30px;
+    padding: 60px 15px;
   }
 
   .about-container {
@@ -883,7 +885,7 @@ justify-content: center;
   }
 }
 
-@media (min-width:750px) and (max-width: 1000px) {
+@media (min-width:500px) and (max-width: 1000px) {
   .about {
     padding: 60px 50px;
   }
@@ -978,7 +980,7 @@ justify-content: center;
   }
 
   .resume {
-    padding: 60px 55px;
+    padding: 60px 15px;
   }
 
   .resume-container .title {
@@ -993,6 +995,12 @@ justify-content: center;
     padding: 0 5px 0 30px;
   }
 
+}
+
+@media (min-width:500px) and (max-width: 1000px) {
+  .resume{
+    padding: 60px 50px;
+  }
 }
 
 
@@ -1059,7 +1067,7 @@ justify-content: center;
 @media (max-width: 700px) {
 
   .services {
-    padding: 60px 40px;
+    padding: 60px 15px;
   }
 
   .services-card {
@@ -1080,6 +1088,12 @@ justify-content: center;
   .services-card {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 350px 350px 350px;
+  }
+}
+
+@media (min-width:500px) and (max-width: 1000px) {
+  .services{
+    padding: 60px 50px;
   }
 }
 
@@ -1185,7 +1199,7 @@ justify-content: center;
 /* media query for portfolio */
 @media (max-width: 700px) {
   .portfolio {
-    padding: 60px 30px;
+    padding: 60px 15px;
   }
 
   .portfolio-container {
@@ -1209,6 +1223,12 @@ justify-content: center;
     grid-column: span 1;
   }
 
+}
+
+@media (min-width:500px) and (max-width: 1000px) {
+  .portfolio{
+    padding: 60px 50px;
+  }
 }
 
 
@@ -1361,7 +1381,7 @@ textarea::placeholder {
 
 @media (max-width:500px) {
   .contact {
-    padding: 60px 20px;
+    padding: 60px 15px;
     gap: 20px;
   }
 
