--- a/styles.css
+++ b/styles.css
@@ -125,10 +125,9 @@ h6 {
 .home {
   display: flex;
   justify-content: flex-start;
-  /* padding:0px, 300px; */
   height: 100vh;
   align-items: center;
-  padding: 0 50px;
+  padding: 0 100px;
 }
 
 
@@ -254,6 +253,12 @@ h6 {
   font-weight: bolder;
 }
 
+.home-view2 .nav-center ul li {
+  color: var(--text-color);
+  font-weight: bold;
+  line-height: 20px;
+}
+
 .home-view2 .socials,
 .home-view2 .text {
   display: none;
@@ -281,6 +286,11 @@ h6 {
 }
 
 /* second view of navbar ends here */
+@media (min-width: 0px) and (max-width: 500px) {
+  .home-view2 .home-container {
+    padding: 20px 19px;
+  }
+}
 @media (max-width: 900px) {
   .home-view2 {
     padding: 0px;
@@ -292,6 +302,9 @@ h6 {
 
   .home-view2 .home-container h1 {
     font-size: 25px;
+  }
+  .home-view2  .show-nav{
+    padding-top: 20px;
   }
 
 }
