--- a/styles.css
+++ b/styles.css
@@ -286,18 +286,27 @@ h6 {
 }
 
 /* second view of navbar ends here */
-@media (min-width: 0px) and (max-width: 500px) {
+@media (max-width: 500px) {
   .home-view2 .home-container {
     padding: 20px 19px;
   }
 }
+
+@media (min-width: 500px) and (max-width: 600px) {
+  .home-view2 .home-container {
+    padding: 20px 47px;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 900px) {
+  .home-view2 .home-container {
+    padding: 20px 50px;
+  }
+}
+
 @media (max-width: 900px) {
   .home-view2 {
     padding: 0px;
-  }
-
-  .home-view2 .home-container {
-    padding: 20px 40px;
   }
 
   .home-view2 .home-container h1 {
@@ -358,7 +367,7 @@ h6 {
     position: absolute;
     top: 0;
     right: 0;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-right: 10px;
     font-size: 30px;
   }
