--- a/styles.css
+++ b/styles.css
@@ -1374,6 +1374,14 @@ textarea::placeholder {
   display: flex;
   justify-content: center;
   width: 100%;
+  flex-direction: column;
+}
+
+.btn-con span{
+   color: var(--primary-color);
+   padding: 10px;
+   margin-top: 10px;
+   display: none;
 }
 
 
@@ -1411,6 +1419,13 @@ textarea::placeholder {
   .btn {
     width: 60%;
   }
+
+  .btn-con span{
+    color: var(--primary-color);
+    padding: 0px;
+    margin-top: 10px;
+    display: none;
+ }
 }
 
 @media (min-width:500px) and (max-width:1000px) {
