--- a/styles.css
+++ b/styles.css
@@ -1587,3 +1587,37 @@ img {
   
 }
 
+
+.modal{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.modal-main{
+  text-align: center;
+  background: white;
+  border-radius: 6px;
+  width: 40%;
+  min-height:300px;
+  display: flex;
+  margin-top: 150px;
+  /* align-items: center; */
+  justify-content: center;
+  flex-direction: column;
+  color: var(--text-color);
+  box-shadow: 2px 2px 10px 5px rgba(88, 88, 89, 0.523);
+}
+.modal p{
+  margin-bottom: 20px;
+}
+
+.modal a{
+ background-color: var(--primary-color);
+ padding: 7px 20px;
+ border-radius: 6px;
+ color: white;
+ max-width: 20px;
+} 
+
