--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   --text-color: #000000b3;
   --background: rgb(220, 220, 220);
   --hometab-bg: rgb(249, 245, 245);
-  --section-color: #ffffff81;
+  --section-color: #ffffffb3;
   --background-img: url(./Assets/images/lightmode-bg.png);
   --background-img2: url(./Assets/images/lightmode-bg.png);
   --left-outline: rgba(249, 245, 245, 0.847);
@@ -1590,24 +1590,24 @@ img {
 
 .modal{
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content:center;
+  align-items:center;
   width: 100%;
+  height: 100vh;
 }
 
 .modal-main{
   text-align: center;
-  background: white;
+  background: var(--section-color);
   border-radius: 6px;
-  width: 40%;
+  width:fit-content;
   min-height:300px;
   display: flex;
-  margin-top: 150px;
-  /* align-items: center; */
   justify-content: center;
   flex-direction: column;
   color: var(--text-color);
-  box-shadow: 2px 2px 10px 5px rgba(88, 88, 89, 0.523);
+  padding: 20px 100px;
+  box-shadow: 2px 2px 2px rgba(133, 133, 137, 0.523);
 }
 .modal p{
   margin-bottom: 20px;
@@ -1620,4 +1620,11 @@ img {
  color: white;
  max-width: 20px;
 } 
+
+
+@media (max-width:500px) {
+ .modal-main{
+  padding: 0 30px;
+ }
+}
 
