--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   --text-color: #000000b3;
   --background: rgb(220, 220, 220);
   --hometab-bg: rgb(249, 245, 245);
-  --section-color: #ffffffb3;
+  --section-color: rgba(255, 255, 255, 0.728);
   --background-img: url(./Assets/images/lightmode-bg.png);
   --background-img2: url(./Assets/images/lightmode-bg.png);
   --left-outline: rgba(249, 245, 245, 0.847);
@@ -456,12 +456,14 @@ h6 {
 .about {
   padding: 60px 60px;
   display: none;
+  
 }
 
 .about-main {
   background-color: var(--section-color);
   margin-top: 70px;
   padding: 20px;
+  position: relative;
 
 }
 
@@ -1598,7 +1600,7 @@ img {
 
 .modal-main{
   text-align: center;
-  background: var(--section-color);
+  background-color:rgba(255, 255, 255, 0.913);
   border-radius: 6px;
   width:fit-content;
   min-height:300px;
@@ -1606,10 +1608,17 @@ img {
   justify-content: center;
   flex-direction: column;
   padding: 20px 100px;
-  box-shadow: 2px 2px 2px rgba(133, 133, 137, 0.523);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
 .modal p{
-  margin-bottom: 20px;
+  font-size: small;
+}
+
+.modal i{
+  font-size: 40px;
+  color: rgba(255, 0, 0, 0.701);
+  margin-bottom: 35px;
 }
 
 .modal a{
@@ -1621,9 +1630,11 @@ img {
 } 
 
 
+
 @media (max-width:500px) {
  .modal-main{
   padding: 0 30px;
  }
 }
+
 
