--- a/styles.css
+++ b/styles.css
@@ -710,14 +710,6 @@ h6 {
   }
 }
 
-/* .interest-cards div {
-  background-color: rgba(78, 77, 77, 0.363);
-  text-align: center;
-  line-height: 5px;
-  padding: 40px 20px;
-  margin-top: 10px;
-  font-weight: bolder;
-} */
 .interest-cards div {
   background-color: rgba(78, 77, 77, 0.363);
   text-align: center;
@@ -742,25 +734,6 @@ h6 {
   gap: 14px;
 }
 
-.fa.fa-address-card {
-  font-size: xx-large;
-  color: rgb(170, 28, 106);
-}
-
-.fa.fa-binoculars {
-  font-size: xx-large;
-  color: rgb(151, 241, 133);
-}
-
-.fa.fa-file-code-o {
-  font-size: xx-large;
-  color: rgb(34, 165, 194);
-}
-
-.fa.fa-bullhorn {
-  font-size: xx-large;
-  color: rgb(247, 255, 28);
-}
 
 .testimonial .heading {
   width: 11%;
@@ -771,34 +744,55 @@ h6 {
   padding: 30px 0;
 }
 
+
+
 .wrapper {
+  display: flex;
+  height: 250px;
+  width: auto;
+  margin-top: 20px;
+  transition: transform 0.5s ease-in-out;
   overflow: hidden;
 }
 
-.slider {
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 3)-12px);
-  gap: 23px;
-  min-height: 245px;
-  width: 2200px;
-  margin-top: 20px;
-}
-
-.slider .slide {
+.wrapper .slide {
   background-color: rgba(78, 77, 77, 0.363);
   text-align: justify;
   text-wrap: wrap;
   font-size: medium;
   font-style: italic;
   line-height: normal;
-  padding: 40px 15px;
+  padding: 20px 15px;
   cursor: pointer;
   width: 100%;
   border-radius: 6px;
   position: relative;
-  height: 82%;
+  height: 80%;
+  box-sizing: border-box;
+  margin-right: 20px;
 }
+
+/* Adjust styles for screens larger than 1200px */
+@media (min-width: 1200px) {
+  .wrapper .slide {
+    min-width: calc(100% / 3 - 16px);
+  }
+}
+
+/* Adjust styles for screens between 768px and 1199px */
+@media (max-width: 1199px) and (min-width: 768px) {
+  .wrapper .slide {
+    min-width: calc(100% / 2 - 14px);
+  }
+}
+
+/* Adjust styles for screens up to 767px */
+@media (max-width: 767px) {
+  .wrapper .slide {
+    min-width: calc(100% - 4px); /* Single slide for small screens */
+  }
+}
+
 
 .slide .client-1 {
   position: absolute;
@@ -846,6 +840,7 @@ h6 {
   height: 10px;
   border-radius: 50%;
 }
+
 
 /* media-query */
 @media (max-width: 1000px) {
@@ -920,6 +915,7 @@ h6 {
     width: 50%;
   }
 }
+
 
 /*resume section*/
 .resume {
