--- a/styles.css
+++ b/styles.css
@@ -502,6 +502,9 @@ h6 {
 
 .about-container {
   display: flex;
+  align-items: flex-start;
+  gap:40px;
+  margin-bottom: 60px;
 }
 
 .about-container h2,
@@ -514,10 +517,17 @@ h6 {
 
 .about .img-container {
   margin-top: 20px;
+  width: 310px; /* Set the width of your container */
+  height: 370px; /* Set the height of your container */
+  border: 1px solid #ccc; /* Optional: Add a border for visualization */
+  overflow: hidden; 
+  border-radius: 100%;
 }
 
 .about img {
-  width: 300px;
+  width: 100%; /* Make the image take up 100% of the container's width */
+  height: 100%; /* Make the image take up 100% of the container's height */
+  object-fit: cover;
 }
 
 .heading {
@@ -544,12 +554,25 @@ h6 {
 .about .text-container {
   line-height: 30px;
   padding: 10px;
-  margin-bottom: 40px;
+  width: 70%;
+  margin-top: 30px;
 }
 
 .about .text-container p {
   margin-top: 10px;
   text-align: justify;
+  margin-bottom: 10px;
+
+}
+
+.about a {
+  text-decoration: none;
+  color: white;
+  font-size:medium;
+}
+
+.about a:hover{
+  font-weight: bolder;
 }
 
 .clients-cards {
@@ -666,7 +689,7 @@ h6 {
 }
 
 .skill-bar .bar .react {
-  width: 70%;
+  width: 80%;
   animation: react 3s;
 }
 
@@ -676,12 +699,12 @@ h6 {
   }
 
   100% {
-    width: 70%;
+    width: 80%;
   }
 }
 
 .skill-bar .bar .tailwind {
-  width: 60%;
+  width: 70%;
   animation: tailwind 3s;
 }
 
@@ -691,7 +714,7 @@ h6 {
   }
 
   100% {
-    width: 60%;
+    width: 70%;
   }
 }
 
@@ -701,6 +724,36 @@ h6 {
 }
 
 @keyframes github {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 60%;
+  }
+}
+
+.skill-bar .bar .typescript {
+  width: 70%;
+  animation: typescript 3s;
+}
+
+@keyframes typescript {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 70%;
+  }
+}
+
+.skill-bar .bar .next{
+  width: 60%;
+  animation: next 3s;
+}
+
+@keyframes next {
   0% {
     width: 0;
   }
@@ -767,12 +820,13 @@ h6 {
 
 .wrapper {
   display: flex;
-  height: 250px;
+  height: 350px;
   width: auto;
   margin-top: 20px;
   transition: transform 0.5s ease-in-out;
   overflow: hidden;
 }
+
 
 .wrapper .slide {
   background-color: rgba(78, 77, 77, 0.363);
@@ -781,12 +835,11 @@ h6 {
   font-size: medium;
   font-style: italic;
   line-height: normal;
-  padding: 20px 15px;
-  cursor: pointer;
+  padding: 10px 15px;
   width: 100%;
   border-radius: 6px;
   position: relative;
-  height: 80%;
+  height: 58%;
   box-sizing: border-box;
   margin-right: 20px;
 }
@@ -810,9 +863,34 @@ h6 {
   .wrapper .slide {
     min-width: calc(100% - 4px); /* Single slide for small screens */
   }
+  
+  .about, .resume, .portfolio, .contact {
+    background-image: none;
+  }
+}
+ 
+.fa.fa-quote-left, .fa.fa-quote-right
+{
+  color: var(--left-outline);
+}
+.slide p{
+  margin-top:28px;
 }
 
+.slide .name{
+  margin-top: 120px;
+}
 
+.slide .roles{
+  margin-top: 3px;
+}
+
+.slide .closing-quote{
+  font-size:60px;
+  position: absolute;
+  display: block;
+  right: 20px; 
+}
 .slide .client-1 {
   position: absolute;
   border-radius: 50%;
@@ -873,6 +951,7 @@ h6 {
 
   .about .text-container {
     padding: 0px;
+    width:100%;
   }
 
   .about .img-container {
@@ -883,7 +962,8 @@ h6 {
   }
 
   .about .text-container p {
-    text-align: left;
+    text-align: justify;
+    margin-bottom: 0px;
   }
 
   .clients-cards {
@@ -931,7 +1011,7 @@ h6 {
   }
 
   .about img {
-    width: 50%;
+    /* width: 50%; */
   }
 }
 
