--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ h6 {
   font-family: "Raleway", sans-serif;
 }
 
-.main-conatiner{
+.main-container{
   max-width: 1440px;
   margin: 0 auto;
 }
@@ -131,6 +131,8 @@ h6 {
   height: 100vh;
   align-items: center;
   padding: 0 100px;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .home-container {
@@ -840,7 +842,7 @@ h6 {
   width: 100%;
   border-radius: 6px;
   position: relative;
-  height: 58%;
+  height:40%;
   box-sizing: border-box;
   margin-right: 20px;
 }
@@ -872,7 +874,7 @@ h6 {
   color: var(--left-outline);
 }
 .slide p{
-  margin-top:28px;
+  /* margin-top:28px; */
 }
 
 .slide .name{
@@ -897,7 +899,7 @@ h6 {
   margin: 20px 40px;
   border: 6px solid rgba(78, 77, 77, 0.409);
   left: -15px;
-  top: 140px;
+  top: 82px;
 }
 
 .slide .client-2 {
@@ -908,7 +910,7 @@ h6 {
   margin: 20px 40px;
   border: 6px solid rgba(78, 77, 77, 0.409);
   left: -15px;
-  top: 140px;
+  top: 82px;
 }
 
 .slide .client-3 {
@@ -919,7 +921,7 @@ h6 {
   margin: 20px 40px;
   border: 6px solid rgba(78, 77, 77, 0.409);
   left: -15px;
-  top: 140px;
+  top: 82px;
 }
 
 .navigation-visbility {
@@ -945,11 +947,13 @@ h6 {
 
   .about-container {
     flex-direction: column;
+    align-items: center;
   }
 
   .about .text-container {
     padding: 0px;
     width:100%;
+    margin-top: 0px;
   }
 
   .about .img-container {
@@ -1007,10 +1011,46 @@ h6 {
   .about {
     padding: 60px 50px;
   }
+}
 
-  .about img {
-    /* width: 50%; */
+@media (min-width: 300px) and (max-width: 360px) {
+  .about .img-container {
+    width: 100%;
   }
+}
+
+@media (min-width: 360px) and (max-width: 400px) {
+  .about .img-container {
+    width: 90%;
+  }
+}
+
+@media (min-width: 400px) and (max-width: 500px) {
+.about .img-container {
+  width: 70%;
+}
+
+}
+
+@media (min-width: 500px) and (max-width: 600px) {
+  .about .img-container {
+    width: 70%;
+  }
+  
+  }
+
+  @media (min-width: 600px) and (max-width: 700px) {
+    .about .img-container {
+      width: 55%;
+    }
+    
+}
+
+@media (min-width: 700px) and (max-width: 1000px) {
+  .about .img-container {
+    width: 40%;
+  }
+  
 }
 
 
