--- a/styles.css
+++ b/styles.css
@@ -383,6 +383,7 @@ h6 {
   .light-dark-toggle i {
     display: block;
     margin-top: 30px;
+   
   }
 
   .show-nav {
@@ -798,7 +799,7 @@ h6 {
 
 .testimonial {
   margin-top: 30px;
-  padding: 30px 0;
+  padding-top: 30px;
 }
 
 .fa.fa-address-card {
@@ -824,7 +825,7 @@ h6 {
 
 .wrapper {
   display: flex;
-  height: 350px;
+  height: 250px;
   width: auto;
   margin-top: 20px;
   transition: transform 0.5s ease-in-out;
@@ -844,7 +845,7 @@ h6 {
   width: 100%;
   border-radius: 6px;
   position: relative;
-  height:40%;
+  height:55%;
   box-sizing: border-box;
   margin-right: 20px;
 }
@@ -872,13 +873,17 @@ h6 {
 
 @media (max-width: 400px) {
   .wrapper .slide {
-    height: 55% !important;
+    height: 68% !important;
   }
   .slide .client-1 {
-    top:140px !important;
+    top:124px !important;
   }
   .slide .title{
-    top:255px !important;
+    top:240px !important;
+  }
+
+  .wrapper {
+    height: 300px;
   }
   
 }
@@ -886,13 +891,11 @@ h6 {
 {
   color: var(--left-outline);
 }
-.slide p{
-  /* margin-top:28px; */
-}
+
 
 .slide .title{
   position: absolute;
-  top:200px;
+  top:180px;
 }
 
 
@@ -914,7 +917,7 @@ h6 {
   margin: 20px 40px;
   border: 6px solid rgba(78, 77, 77, 0.409);
   left: -15px;
-  top: 82px;
+  top: 77px;
 }
 
 .slide .client-2 {
@@ -925,7 +928,7 @@ h6 {
   margin: 20px 40px;
   border: 6px solid rgba(78, 77, 77, 0.409);
   left: -15px;
-  top: 82px;
+  top:77px;
 }
 
 .slide .client-3 {
@@ -936,7 +939,7 @@ h6 {
   margin: 20px 40px;
   border: 6px solid rgba(78, 77, 77, 0.409);
   left: -15px;
-  top: 82px;
+  top: 77px;
 }
 
 .navigation-visbility {
@@ -1407,7 +1410,7 @@ h6 {
 
   .portfolio-container {
     grid-template-columns: 1fr;
-    grid-template-rows: 350px 350px 350px 350px 350px;
+    grid-template-rows: 350px 350px 350px 350px;
     row-gap: 0px;
   }
 
