--- a/styles.css
+++ b/styles.css
@@ -1289,10 +1289,10 @@ h6 {
 
 .portfolio-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 300px 300px;
-  column-gap: 25px;
-  row-gap: 25px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 20px;
   margin-top: 20px;
 }
 
@@ -1303,15 +1303,16 @@ h6 {
 .project-1 img {
   width: 100%;
   height: 100%;
-  object-fit:cover;
+  object-fit:contain;
   transition: transform 0.3s;
 }
 
 .project-1 {
-  width: 350px;
-  height: 300px;
+  width: fit-content;
+  height: fit-content;
   position: relative;
   overflow: hidden;
+  border: 2px solid rgba(249, 247, 247, 0.719);;
 }
 
 .project-1 .fa.fa-compress.first {
@@ -1381,10 +1382,10 @@ h6 {
 /* Style for the modal content */
 .modal-content {
   background-color: var(--modal-background);
-  margin: 3% auto;
+  margin: 1% auto;
   padding: 20px;
   width: 70%;
-  max-width: 800px;
+  max-width: 1300px;
 
 }
 
@@ -1410,8 +1411,8 @@ h6 {
 
   .portfolio-container {
     grid-template-columns: 1fr;
-    grid-template-rows: 350px 350px 350px 350px;
-    row-gap: 0px;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    row-gap: 15px;
   }
 
   .portfolio-container :nth-child(1) {
@@ -1656,15 +1657,16 @@ textarea::placeholder {
 
 /* project details */
 .project-details {
-  padding:10px;
+  padding:20px;
   height:fit-content;
   background-color:var(--modal-background);
 }
 
 .project-container {
   position: relative;
-  text-align: justify;
+  text-align: start;
 }
+
 
 .fa.fa-chevron-right {
   position: absolute;
@@ -1687,6 +1689,7 @@ textarea::placeholder {
   margin-top: 20px;
 }
 
+
 .project-info a {
   color: var(--primary-color);
   font-weight: bold;
@@ -1694,6 +1697,11 @@ textarea::placeholder {
 
 .project-info p{
   font-size: 14px;
+}
+
+p.details {
+  font-size: 14px;
+  line-height: 25px;
 }
 
 .project-info h4 {
@@ -1800,6 +1808,10 @@ img {
   .modal-content{
     padding: 0px;
   }
+
+  .project-details p {
+    font-size: 14px;
+  }
 }
 
 .modal-form{
@@ -1845,7 +1857,7 @@ img {
 
 @media (max-width:500px) {
  .modal-main{
-  padding: 0 30px;
+  padding: 0 20px;
  }
 }
 
